--- a/shipyard.yaml
+++ b/shipyard.yaml
@@ -13,7 +13,7 @@ spec:
                 size: "medium"
             - name: "deployment"
               properties:
-                deploymentstrategy: "direct"
+                deploymentstrategy: "user_managed"
             - name: "test"
               properties:
                 teststrategy: "performance"
