--- a/shipyard.yaml
+++ b/shipyard.yaml
@@ -14,11 +14,12 @@ spec:
             - name: "deployment"
               properties:
                 deploymentstrategy: "user_managed"
-            - name: "test"
-              properties:
-                teststrategy: "performance"
-            - name: "evaluation"
-            - name: "release"
+            #- name: "test"
+            #  properties:
+            #    teststrategy: "performance"
+            #- name: "evaluation"
+            #- name: "release"
+            - name: "environment-teardown"
     - name: "production"
       sequences:
         - name: "delivery"
