--- a/shipyard.yaml
+++ b/shipyard.yaml
@@ -14,9 +14,9 @@ spec:
             - name: "deployment"
               properties:
                 deploymentstrategy: "user_managed"
-            #- name: "test"
-            #  properties:
-            #    teststrategy: "performance"
+            - name: "test"
+              properties:
+                teststrategy: "performance"
             #- name: "evaluation"
             #- name: "release"
             # - name: "environment-teardown"
