--- a/helloservice/job/config.yaml
+++ b/helloservice/job/config.yaml
@@ -12,3 +12,15 @@ actions:
           - sh
         args:
           - /keptn/k6/run-test.sh
+  - name: "setup-monitoring"
+    events:
+      - name: "sh.keptn.event.monitoring-setup.triggered"
+    tasks:
+      - name: "monitoring"
+        files:
+          - prometheus
+        image: "jetzlstorfer/setup-monitoring:0.1"
+        cmd:
+          - sh
+        args:
+          - /keptn/prometheus/setup.sh
