--- a/shipyard.yaml
+++ b/shipyard.yaml
@@ -11,7 +11,7 @@ spec:
             - name: "environment-setup"
               properties:
                 size: "medium"
-            #- name: "monitoring-setup"
+            - name: "monitoring-setup"
             - name: "deployment"
               properties:
                 deploymentstrategy: "user_managed"
